--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ body {
   padding: 50px;
   height: 100vh;
   background-image: linear-gradient(rgba(#000, 0.6), rgba(#000, 0.6)),
-    url("assets/brick-wall.jpg");
+    url("assets/bgn.jpg");
   background-size: cover;
 }
 
